new font style linked

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Your RN Web App</title>
+
+    <!-- Define your custom fonts using @font-face -->
+    <style>
+        @font-face {
+            font-family: 'AlegreyaSans-Black';
+            src: url('/assets/fonts/AlegreyaSans-Black.ttf') format('truetype');
+            font-weight: 900;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'AlegreyaSans-Bold';
+            src: url('/assets/fonts/AlegreyaSans-Bold.ttf') format('truetype');
+            font-weight: bold;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'AlegreyaSans-Regular';
+            src: url('/assets/fonts/AlegreyaSans-Regular.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'AlegreyaSans-Light';
+            src: url('/assets/fonts/AlegreyaSans-Light.ttf') format('truetype');
+            font-weight: 300;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'AlegreyaSans-Medium';
+            src: url('/assets/fonts/AlegreyaSans-Medium.ttf') format('truetype');
+            font-weight: 500;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'AlegreyaSans-Thin';
+            src: url('/assets/fonts/AlegreyaSans-Thin.ttf') format('truetype');
+            font-weight: 100;
+            font-style: normal;
+        }
+    </style>
+
     <style>
         #app-root {
             display: flex;
@@ -14,6 +55,6 @@
     </style>
 </head>
 <body>
-<div id="app-root"></div>
+    <div id="app-root"></div>
 </body>
 </html>
